--- a/package.json
+++ b/package.json
@@ -1,27 +1,14 @@
 {
-  "name": "glitch-mvp-node",
-  "version": "0.1.0",
-  "description": "A simple Node app built on fastify, instantly up and running.",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
+  "name": "chat",
+  "version": "0.0.0",
+  "description": "A simple chat client using socket.io",
+  "main": "app.js",
+  "private": true,
   "dependencies": {
-    "fastify": "^4.15.0",
-    "handlebars": "^4.7.7",
-    "@fastify/view": "^7.4.1",
-    "@fastify/static": "^6.9.0",
-    "@fastify/formbody": "^7.4.0"
+    "express": "^4.18.2",
+    "socket.io": "^4.5.2"
   },
-  "engines": {
-    "node": "14.x"
-  },
-  "repository": {
-    "url": "https://glitch.com/edit/#!/glitch-mvp-node"
-  },
-  "license": "MIT",
-  "keywords": [
-    "node",
-    "glitch"
-  ]
+  "scripts": {
+    "start": "node app.js"
+  }
 }
