--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "chat",
   "version": "0.0.0",
   "description": "A simple chat client using socket.io",
-  "main": "app.js",
+  "main": "server.js",
   "private": true,
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.5.2"
+    "socket.io": "^4.6.1"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node server.js"
   }
 }
